# bizarro_tetris

./: README.md  output.txt  pyproject.toml
src/simple_tetris/: grid.py  tetrimino.py
src/simpletetris/: grid.py  row.py  tetrimino.py  tetris.py
test/: test_grid.py  test_tetrimino.py  test_tetris.py
