[build-system]
requires = ["setuptools>=61.0", "pytest>=7.3.1"]
build-backend = "setuptools.build_meta"

[project]
name = "simpletetris"
version = "0.0.1"
authors = [
  { name="jkyu", email="jimmykyu@pm.me" },
]
description = "Simplified Tetris"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.scripts]
tetris = "simpletetris.tetris:main_cli"